# mad_project_backend

./: pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 491469e5020b_initial_schema.py  4c3a93628666_initial_schema.py  4f98123cbb2f_add_tables.py  5472f3689408_add_order.py  636c28c334fa_migrations.py  ea906b25c855_initial_schema.py
app/: main.py
app/auth/: auth.py
app/dal/: admin_dal.py  foodItem_dal.py  menu_dal.py  order_dal.py  user_dal.py
app/db/: session.py
app/db/models/: __init__.py  admin.py  food_items.py  init.py  menu.py  orders.py  user.py
app/routes/: admin.py  auth.py  foodItem.py  menu.py  orders.py  routes.py
app/schemas/: auth.py  foodItem.py  menu.py  order.py
app/services/: auth_service.py  foodItem_service.py  menu_service.py  order_service.py
