[project]
name = "mad-project-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.3",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.37.0",
]
